tooling/nargo_cli/tests/snapshots/execution_success/while_loop_break_regression_8521/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u32):
    (no terminator instruction)
}
[while_loop_break_regression_8521] Circuit output: "SQF"
